ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - example.com
    - my.example.com
    secretName: echoserver-tls
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
  - host: my.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
